--- a/nanen/pubspec.yaml
+++ b/nanen/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^4.0.3
   flutter_native_splash: ^2.2.19
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
