--- a/nanen/pubspec.yaml
+++ b/nanen/pubspec.yaml
@@ -42,6 +42,7 @@ flutter:
     - assets/images/
     - assets/images/splash_images/
     - assets/images/on_boarding_images/
+    - assets/images/welcome_images/
 
   # fonts:
   #   - family: Schyler
