--- a/nanen/pubspec.yaml
+++ b/nanen/pubspec.yaml
@@ -43,6 +43,8 @@ flutter:
     - assets/images/splash_images/
     - assets/images/on_boarding_images/
     - assets/images/welcome_images/
+    - assets/logo/
+    - assets/
 
   # fonts:
   #   - family: Schyler
