--- a/nanen/pubspec.yaml
+++ b/nanen/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   get: ^4.6.5
   liquid_swipe: ^3.1.0
   smooth_page_indicator: ^1.0.1
+  flutter_otp_text_field: ^1.1.1
 
 dev_dependencies:
   flutter_test:
@@ -43,6 +44,7 @@ flutter:
     - assets/images/splash_images/
     - assets/images/on_boarding_images/
     - assets/images/welcome_images/
+    - assets/images/forget_password/
     - assets/logo/
     - assets/
 
