--- a/nanen/pubspec.yaml
+++ b/nanen/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   liquid_swipe: ^3.1.0
   smooth_page_indicator: ^1.0.1
   flutter_otp_text_field: ^1.1.1
+  firebase_core: ^2.9.0
+  firebase_auth: ^4.4.0
 
 dev_dependencies:
   flutter_test:
@@ -40,13 +42,14 @@ flutter:
   uses-material-design: true
 
   assets:
+    - assets/logo/
     - assets/images/
     - assets/images/splash_images/
     - assets/images/on_boarding_images/
     - assets/images/welcome_images/
     - assets/images/forget_password/
-    - assets/logo/
     - assets/
+    - assets/images/dashboard/
 
   # fonts:
   #   - family: Schyler
