--- a/nanen/pubspec.yaml
+++ b/nanen/pubspec.yaml
@@ -14,12 +14,23 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^4.0.3
   flutter_native_splash: ^2.2.19
+
+  ## -- STATE MANAGEMENT
   get: ^4.6.5
+
+  ## -- OnBoarding Packages
   liquid_swipe: ^3.1.0
   smooth_page_indicator: ^1.0.1
+
+  ## -- OTP TEXT FIELD Package
   flutter_otp_text_field: ^1.1.1
+
+  ## -- Firebase Packages
   firebase_core: ^2.9.0
+
+  ## -- Icon Packages
   firebase_auth: ^4.4.0
+  line_awesome_flutter: ^2.0.0
 
 dev_dependencies:
   flutter_test:
