--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   carousel_slider: ^4.2.1
   google_fonts: ^4.0.3
   get:
+  image_picker: ^0.8.7+4
+  path_provider: ^2.0.15
 
 dev_dependencies:
   flutter_test:
