--- a/nanen/packages/auth_repository/android/local.properties
+++ b/nanen/packages/auth_repository/android/local.properties
@@ -1,2 +1,2 @@
-sdk.dir=C:\\Users\\User\\AppData\\Local\\Android\\sdk
+sdk.dir=C:\\Users\\82109\\AppData\\Local\\Android\\sdk
 flutter.sdk=C:\\tools\\flutter
