--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,16 @@ dependencies:
   get:
   image_picker: ^0.8.7+4
   path_provider: ^2.0.15
+  syncfusion_flutter_calendar: ^21.2.4
+
+  # handle dates
+  intl: ^0.18.1
+
+  # state management
+  provider: ^6.0.5
+
+
+
 
 dev_dependencies:
   flutter_test:
