--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,15 @@ dependencies:
   masonry_grid: ^1.0.0
   flutter_staggered_grid_view: ^0.6.2
 
+  image_picker: ^0.8.7+4
+  path_provider: ^2.0.15
+  syncfusion_flutter_calendar: ^21.2.4
+    # handle dates
+  intl: ^0.18.1
+
+  # state management
+  provider: ^6.0.5
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
