--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   # state management
   provider: ^6.0.5
   
+  url_launcher: ^6.0.9 
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
