--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,13 @@ dependencies:
   # state management
   provider: ^6.0.5
   
-  url_launcher: ^6.0.9 
+  url_launcher: ^6.0.9
+
+  # image upload
+  image_cropper: ^1.4.1 
+  flutter_image_compress: ^1.0.0
+
+
   
 dev_dependencies:
   flutter_test:
