--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  font_awesome_flutter: ^10.5.0
+  intl: ^0.18.1
+  url_launcher: ^6.1.12
+  vector_math: ^2.1.4
 
 flutter_native_splash:
   color: "#f7f6f1"
@@ -95,6 +99,8 @@ flutter:
     - assets/images/mission/
     - assets/images/profile/
     - assets/images/login/
+    - assets/fitness_app/
+
 
     # - assets/images/tabbarview/
     # - assets/images/tabbarview/active
@@ -102,21 +108,19 @@ flutter:
 
 
 
-
-
-
-
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+  fonts:
+    - family: WorkSans
+      fonts:
+        - asset: assets/fonts/WorkSans-Regular.ttf
+        - asset: assets/fonts/WorkSans-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/WorkSans-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/WorkSans-Bold.ttf
+          weight: 700
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/Roboto-Bold.ttf
+        - asset: assets/fonts/Roboto-Regular.ttf
+        - asset: assets/fonts/Roboto-Medium.ttf
+          weight: 400
