--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -100,6 +100,8 @@ flutter:
     - assets/images/profile/
     - assets/images/login/
     - assets/fitness_app/
+    - assets/design_course/
+
 
 
     # - assets/images/tabbarview/
