--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   smooth_page_indicator: ^1.0.1
 
   line_awesome_flutter : ^2.0.0
-  google_fonts: ^4.0.3
+  google_fonts: ^5.1.0
   flutter_native_splash: ^2.2.19
   
   flutter_otp_text_field: ^1.1.1
@@ -28,24 +28,24 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.9.0
   firebase_auth: ^4.4.1
-  google_sign_in: ^5.4.4
+  google_sign_in: ^6.1.4
   kakao_flutter_sdk: ^1.4.3
-  http: ^0.13.6
+  http: ^1.1.0
   cloud_firestore: ^4.8.0
 
 
   percent_indicator: ^4.0.1
   carousel_slider: ^4.2.1
-  fl_chart: ^0.62.0
+  fl_chart: ^0.63.0
   collection: ^1.17.1
   cached_network_image: ^3.2.3
-  syncfusion_flutter_charts: ^21.2.5
+  syncfusion_flutter_charts: ^22.1.39
   masonry_grid: ^1.0.0
   flutter_staggered_grid_view: ^0.6.2
 
-  image_picker: ^0.8.7+4
+  image_picker: ^1.0.1
   path_provider: ^2.0.15
-  syncfusion_flutter_calendar: ^21.2.4
+  syncfusion_flutter_calendar: ^22.1.39
     # handle dates
   intl: ^0.18.1
 
@@ -55,8 +55,8 @@ dependencies:
   url_launcher: ^6.0.9
 
   # image upload
-  image_cropper: ^1.4.1 
-  flutter_image_compress: ^1.0.0
+  image_cropper: ^5.0.0 
+  flutter_image_compress: ^2.0.4
 
 
   
