--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
+  ## mission
+  dots_indicator: ^2.1.1
 
   ## STATE MANAGEMENT
   get: ^4.6.5
@@ -32,7 +35,6 @@ dependencies:
   kakao_flutter_sdk: ^1.4.3
   http: ^1.1.0
   cloud_firestore: ^4.8.0
-
 
   percent_indicator: ^4.0.1
   carousel_slider: ^4.2.1
