--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dependencies:
   dots_indicator: ^3.0.0
   line_awesome_flutter : ^2.0.0
   fl_chart: ^0.63.0
+  image_picker: ^1.0.4
+  path: ^1.8.3
 
 
 
