--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.6.10'
+    ext.kotlin_version = '1.7.10'
     ext.maps_version = '18.1.0'
 
     repositories {
@@ -8,8 +8,11 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.0'
+        // classpath 'com.android.tools.build:gradle:4.1.0'
+        classpath 'com.android.tools.build:gradle:7.3.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        // classpath "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+
     }
 }
 
@@ -19,6 +22,7 @@ allprojects {
         mavenCentral()
     }
 }
+
 
 rootProject.buildDir = '../build'
 subprojects {
