1110 image 업로드 영구 저장, 미션 클릭 시 전에 업로드한 이미지 가져오기

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -119,6 +119,11 @@ flutter:
     - assets/logo/
     - assets/images/welcome_images/
     - assets/marketing/
+    - assets/mission/1/
+    - assets/mission/2/
+    - assets/mission/3/
+    - assets/mission/4/
+
 
   fonts:
     - family: Cinzel
