--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,8 @@ dependencies:
   fl_chart: ^0.63.0
   image_picker: ^1.0.4
   path: ^1.8.3
+  animated_text_kit: ^4.2.2
+  flutter_spinkit: ^5.2.0
   # cloud_firestore: ^3.2.0
 
 
@@ -118,6 +120,7 @@ flutter:
     - assets/images/home/
     - assets/logo/
     - assets/images/welcome_images/
+    - assets/images/
 
 
 
